objects/fferpcore__ErpCommonObjectSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains the settings that determine the behavior of common objects or functionality affected by common objects.</description>
    <fields>
        <fullName>fferpcore__AllowBillingDocumentLineReparenting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that you can reparent billing document line items.</description>
        <inlineHelpText>Indicates that you can reparent billing document line items.</inlineHelpText>
        <label>Allow Billing Document Line Reparenting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__DisableCreditTermsMergeValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Foundations should prevent accounts from being merged if more than one of them has an account credit terms record.</description>
        <inlineHelpText>Indicates that you do not want to prevent accounts from being merged when more than one of them has an account credit terms record. This might result in accounts with more than one account credit terms record.</inlineHelpText>
        <label>Disable Credit Terms Merge Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__MaintainAccountValidAddressStatus__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether Foundations should maintain the Address Validated fields on Account</description>
        <inlineHelpText>Indicates that you want to automatically update the Billing Address Validated and Shipping Address Validated fields on the Account object when an address is validated or edited.</inlineHelpText>
        <label>Update Address Validated Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCalculationUsesBankersRounding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether tax values calculated on billing document line items are rounded using bankers (HALF-EVEN) rounding or HALF-UP rounding. FinancialForce applications use HALF-UP rounding as standard.</description>
        <inlineHelpText>Indicates whether tax values calculated on billing document line items are rounded using bankers (HALF-EVEN) rounding or HALF-UP rounding. FinancialForce applications use HALF-UP rounding as standard.</inlineHelpText>
        <label>Tax Calculation Uses Bankers Rounding</label>
        <type>Checkbox</type>
    </fields>
    <label>FDN Common Object Settings</label>
</CustomObject>